Handle Invalid Characters in Source Tables (#11)

--- a/src/lakefed_ingest/create_sink_table.ipynb
+++ b/src/lakefed_ingest/create_sink_table.ipynb
@@ -18,18 +18,50 @@
    },
    "outputs": [],
    "source": [
+    "-- create sink table using schema inferred from source table\n",
+    "-- column mapping is enabled to accomodate characters that are not allowed by parquet\n",
+    "-- https://docs.databricks.com/aws/en/delta/column-mapping\n",
+    "\n",
     "declare or replace qry_str string;\n",
+    "declare or replace col_list string;\n",
     "\n",
     "create catalog if not exists identifier(:tgt_catalog);\n",
     "use catalog identifier(:tgt_catalog);\n",
     "create schema if not exists identifier(:tgt_schema);\n",
     "use schema identifier(:tgt_schema);\n",
     "\n",
-    "-- Create sink table using schema inferred from foreign table\n",
+    "set var col_list = (\n",
+    "  select\n",
+    "    concat_ws(\n",
+    "      ', ',\n",
+    "      collect_list(concat('`', col_name, '`', ' ', col_type))\n",
+    "    ) as column_list\n",
+    "  from (\n",
+    "    select\n",
+    "      col.name       as col_name,\n",
+    "      case\n",
+    "        when col.type.name in ('char', 'varchar') then concat(col.type.name, '(', col.type.length, ')') \n",
+    "        when col.type.name = 'decimal' then concat(col.type.name, '(', col.type.precision, ',', col.type.scale, ')')\n",
+    "        else col.type.name\n",
+    "      end as col_type\n",
+    "    from (\n",
+    "      select\n",
+    "        explode(\n",
+    "          from_json(\n",
+    "            json_str,\n",
+    "            'struct<columns: array<struct<name: string, type: struct<length: bigint, name: string, precision: bigint, scale: bigint>>>>'\n",
+    "          ).columns\n",
+    "        ) as col\n",
+    "      from (values (:src_tbl_metadata)) as t(json_str)\n",
+    "    )\n",
+    "  )\n",
+    ");\n",
+    "\n",
     "set var qry_str = \n",
-    "  \"create table if not exists \" || :tgt_table || \" as \"\n",
-    "  \"select \" || :select_list || \" from \" || :src_catalog || '.' || :src_schema || '.' || :src_table || \" \"  \n",
-    "  \"where 1 = 0\";\n",
+    "  'create table if not exists ' || :tgt_table || ' (' || col_list || ')'\n",
+    "  'tblproperties('\n",
+    "    '\\'delta.columnMapping.mode\\' = \\'name\\''\n",
+    "  ')';\n",
     "\n",
     "execute immediate qry_str;"
    ]
@@ -105,6 +137,36 @@
     "  end if;\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25cfa242-4325-48ea-a824-483010b4741d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Truncate target table if performing partitioned copy\n",
+    "-- Partitioned copy is used for full loads, so truncation is needed to avoid duplicates in the target\n",
+    "begin\n",
+    "  declare qry_str string;\n",
+    "  declare load_partitioned boolean;\n",
+    "  set load_partitioned = cast(:load_partitioned as boolean);\n",
+    "\n",
+    "  if load_partitioned is true then\n",
+    "    set qry_str =\n",
+    "      'truncate table ' || :tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table;\n",
+    "    execute immediate qry_str;\n",
+    "  end if;\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
@@ -131,21 +193,47 @@
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
+     }
+    },
+    "load_partitioned": {
+     "currentValue": "",
+     "nuid": "e915617f-8c59-4229-be4d-8c8975013206",
+     "typedWidgetInfo": {
+      "autoCreated": true,
+      "defaultValue": "",
+      "label": null,
+      "name": "load_partitioned",
+      "options": {
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "defaultValue": "",
+      "label": null,
+      "name": "load_partitioned",
+      "options": {
+       "autoCreated": true,
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "select_list": {
@@ -157,21 +245,21 @@
       "label": "",
       "name": "select_list",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "*",
       "label": "",
       "name": "select_list",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "sink_cluster_cols": {
@@ -183,21 +271,21 @@
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_catalog": {
@@ -209,21 +297,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_schema": {
@@ -235,21 +323,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_table": {
@@ -261,21 +349,21 @@
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_catalog": {
@@ -287,21 +375,21 @@
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_schema": {
@@ -313,21 +401,21 @@
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_table": {
@@ -339,21 +427,21 @@
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
